--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "next": "12.1.0",
     "react": "17.0.2",
+    "react-color": "^2.19.3",
     "react-dom": "17.0.2",
     "react-hot-toast": "^2.2.0"
   },
   "devDependencies": {
     "@types/node": "17.0.21",
     "@types/react": "17.0.39",
+    "@types/react-color": "^3.0.6",
     "eslint": "8.10.0",
     "eslint-config-next": "12.1.0",
     "typescript": "4.5.5"
