--- a/package.json
+++ b/package.json
@@ -1,26 +1,48 @@
 {
-  "name": "mysite",
+  "name": "my-digital-cv",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": ">=16.14.2",
+    "yarn": ">=1.22.17",
+    "npm": "please-use-yarn"
+  },
   "scripts": {
-    "dev": "next dev",
+    "dev": "NODE_OPTIONS='--max_old_space_size=512' next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prettier": "prettier --write .",
+    "prepare": "husky install"
   },
   "dependencies": {
-    "next": "12.1.0",
-    "react": "17.0.2",
+    "animate.css": "^4.1.1",
+    "autoprefixer": "^10.4.7",
+    "axios": "^0.26.1",
+    "next": "^12.2.2",
+    "postcss": "^8.4.14",
+    "query-string": "^7.1.1",
     "react-color": "^2.19.3",
-    "react-dom": "17.0.2",
-    "react-hot-toast": "^2.2.0"
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-google-login": "^5.2.2",
+    "react-gtm-module": "^2.0.11",
+    "react-horizontal-scrolling-menu": "^2.7.1",
+    "react-hot-toast": "^2.2.0",
+    "react-icons": "^4.4.0",
+    "react-loader-spinner": "^5.1.5",
+    "react-spinners": "^0.11.0",
+    "tailwindcss": "^3.1.6"
   },
   "devDependencies": {
-    "@types/node": "17.0.21",
-    "@types/react": "17.0.39",
+    "@types/node": "17.0.22",
+    "@types/react": "^18.0.0",
     "@types/react-color": "^3.0.6",
-    "eslint": "8.10.0",
+    "@types/react-gtm-module": "^2.0.1",
+    "eslint": "8.11.0",
     "eslint-config-next": "12.1.0",
-    "typescript": "4.5.5"
+    "husky": "^8.0.1",
+    "prettier": "^2.7.1",
+    "typescript": "4.6.2"
   }
 }
