--- a/package.json
+++ b/package.json
@@ -19,11 +19,12 @@
     "animate.css": "^4.1.1",
     "autoprefixer": "^10.4.7",
     "axios": "^0.26.1",
+    "framer-motion": "^8.0.2",
     "next": "^12.2.2",
     "postcss": "^8.4.14",
     "query-string": "^7.1.1",
-    "react-color": "^2.19.3",
     "react": "^18.0.0",
+    "react-color": "^2.19.3",
     "react-dom": "^18.0.0",
     "react-google-login": "^5.2.2",
     "react-gtm-module": "^2.0.11",
